--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,13 @@
+:root {
+  --bg-color: #fff;
+  --text-color: #000;
+}
+
+[data-theme="dark"] {
+  --bg-color: #282c34;
+  --text-color: #fff;
+}
+
 .App {
   text-align: center;
 }
@@ -14,14 +24,14 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: var(--bg-color) ;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: var(--text-color);
 }
 
 .App-link {
