--- a/src/App.css
+++ b/src/App.css
@@ -14,17 +14,6 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
   background-image: var(--bg-image);
   background-position: left;
@@ -32,25 +21,16 @@
   background-repeat: no-repeat;
   width: 100vw;
   height: 100vh;
+  margin: 0;
   display: flex;
-  min-height: 100vh;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: var(--text-color);
-}
+  transition: background-position 500ms;
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+  @media (min-width: 48.0em) {
+      background-position: center;
   }
 }
